@@ -145,7 +145,8 @@ If --enable-armathentication was activated:
     <player> had <ping> and was on <team>. This line is not printed for bots
   - NUM_HUMANS <n>: There are <n> players that are not AIs and are part of a
     team.
-  - ROUND_SCORE has the player's team's score appended.
+  - ROUND_SCORE has the player's team name appended.
+  - ROUND_SCORE_TEAM: score a team accumulated during the last round.
 - Wrapped console lines are indented by an amount of spaces that can be 
   specified using the setting CONSOLE_INDENT.
 
